WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193156
A MediaTime timescale must never be zero
https://bugs.webkit.org/show_bug.cgi?id=193156
Summary
A MediaTime timescale must never be zero
Eric Carlson
Reported
2019-01-04 13:32:08 PST
The MediaTime's timescale is frequently used as a divisor, so don't allow it to be zero.
Attachments
Patch
(5.62 KB, patch)
2019-01-04 15:35 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(5.99 KB, patch)
2019-01-04 16:53 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-sierra-wk2
(4.28 MB, application/zip)
2019-01-04 17:50 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews102 for mac-sierra
(3.72 MB, application/zip)
2019-01-04 17:58 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews121 for ios-simulator-wk2
(2.39 MB, application/zip)
2019-01-04 18:47 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews114 for mac-sierra
(3.41 MB, application/zip)
2019-01-04 19:06 PST
,
EWS Watchlist
no flags
Details
Patch
(6.00 KB, patch)
2019-01-05 12:45 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.98 KB, patch)
2019-01-07 11:20 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2019-01-04 15:35:56 PST
Created
attachment 358385
[details]
Patch
Eric Carlson
Comment 2
2019-01-04 15:37:04 PST
<
rdar://problem/32504501
>
Eric Carlson
Comment 3
2019-01-04 16:53:24 PST
Created
attachment 358398
[details]
Patch
EWS Watchlist
Comment 4
2019-01-04 17:50:33 PST
Comment on
attachment 358398
[details]
Patch
Attachment 358398
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/10635031
New failing tests: imported/w3c/web-platform-tests/webaudio/the-audio-api/the-mediaelementaudiosourcenode-interface/mediaElementAudioSourceToScriptProcessorTest.html webaudio/silence-after-playback.html
EWS Watchlist
Comment 5
2019-01-04 17:50:35 PST
Created
attachment 358406
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6
2019-01-04 17:58:15 PST
Comment on
attachment 358398
[details]
Patch
Attachment 358398
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/10635317
New failing tests: imported/w3c/web-platform-tests/webaudio/the-audio-api/the-mediaelementaudiosourcenode-interface/mediaElementAudioSourceToScriptProcessorTest.html webaudio/silence-after-playback.html
EWS Watchlist
Comment 7
2019-01-04 17:58:17 PST
Created
attachment 358407
[details]
Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8
2019-01-04 18:47:06 PST
Comment on
attachment 358398
[details]
Patch
Attachment 358398
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/10635436
New failing tests: imported/w3c/web-platform-tests/webaudio/the-audio-api/the-mediaelementaudiosourcenode-interface/mediaElementAudioSourceToScriptProcessorTest.html
EWS Watchlist
Comment 9
2019-01-04 18:47:08 PST
Created
attachment 358417
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 10
2019-01-04 19:06:19 PST
Comment on
attachment 358398
[details]
Patch
Attachment 358398
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/10635518
New failing tests: http/wpt/css/css-animations/start-animation-001.html webaudio/silence-after-playback.html
EWS Watchlist
Comment 11
2019-01-04 19:06:21 PST
Created
attachment 358420
[details]
Archive of layout-test-results from ews114 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-sierra Platform: Mac OS X 10.12.6
Eric Carlson
Comment 12
2019-01-05 12:45:59 PST
Created
attachment 358442
[details]
Patch
Jer Noble
Comment 13
2019-01-07 10:14:51 PST
Comment on
attachment 358442
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=358442&action=review
r=me with nit:
> Source/WTF/wtf/MediaTime.cpp:90 > + if (value < 0) > + *this = negativeInfiniteTime(); > + else > + *this = positiveInfiniteTime();
Nit: in other places you use a ternary operator for this kind of thing.
Eric Carlson
Comment 14
2019-01-07 11:20:17 PST
Created
attachment 358510
[details]
Patch for landing
WebKit Commit Bot
Comment 15
2019-01-07 11:59:29 PST
Comment on
attachment 358510
[details]
Patch for landing Clearing flags on attachment: 358510 Committed
r239688
: <
https://trac.webkit.org/changeset/239688
>
WebKit Commit Bot
Comment 16
2019-01-07 11:59:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug