Cherry-pick r239688. rdar://problem/47158770

A MediaTime timescale must never be zero
    https://bugs.webkit.org/show_bug.cgi?id=193156
    <rdar://problem/32504501>

    Reviewed by Jer Noble.

    Source/WTF:

    * wtf/MediaTime.cpp:
    (WTF::greatestCommonDivisor): ASSERT if either parameter or return value is zero.
    (WTF::MediaTime::MediaTime): Create +/- infinity if passed zero timescale.
    (WTF::MediaTime::createWithFloat): Ditto.
    (WTF::MediaTime::createWithDouble): Ditto.
    (WTF::MediaTime::setTimeScale): Ditto.

    Tools:

    * TestWebKitAPI/Tests/WTF/MediaTime.cpp:
    (TestWebKitAPI::TEST): Add tests for zero timescale.

    Canonical link: https://commits.webkit.org/207708@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239688 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.9@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@239797 268f45cc-cd09-0410-ab3c-d52691b4dbfc