Source/WTF/wtf/MediaTime.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2012 Apple Inc. All rights reserved.
+ * Copyright (C) 2012-2019 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -31,6 +31,7 @@
 
 #include <algorithm>
 #include <cstdlib>
+#include <wtf/Assertions.h>
 #include <wtf/CheckedArithmetic.h>
 #include <wtf/JSONValues.h>
 #include <wtf/MathExtras.h>
@@ -41,6 +42,9 @@ namespace WTF {
 
 static uint32_t greatestCommonDivisor(uint32_t a, uint32_t b)
 {
+    ASSERT(a);
+    ASSERT(b);
+
     // Euclid's Algorithm
     uint32_t temp = 0;
     while (b) {
@@ -48,6 +52,8 @@ static uint32_t greatestCommonDivisor(uint32_t a, uint32_t b)
         b = a % b;
         a = temp;
     }
+
+    ASSERT(a);
     return a;
 }
 
@@ -75,6 +81,10 @@ MediaTime::MediaTime(int64_t value, uint32_t scale, uint8_t flags)
     , m_timeScale(scale)
     , m_timeFlags(flags)
 {
+    if (scale || isInvalid())
+        return;
+
+    *this = value < 0 ? negativeInfiniteTime() : positiveInfiniteTime();
 }
 
 MediaTime::~MediaTime()
@@ -108,6 +118,8 @@ MediaTime MediaTime::createWithFloat(float floatTime, uint32_t timeScale)
         return positiveInfiniteTime();
     if (floatTime < std::numeric_limits<int64_t>::min())
         return negativeInfiniteTime();
+    if (!timeScale)
+        return std::signbit(floatTime) ? negativeInfiniteTime() : positiveInfiniteTime();
 
     while (floatTime * timeScale > std::numeric_limits<int64_t>::max())
         timeScale /= 2;
@@ -136,6 +148,8 @@ MediaTime MediaTime::createWithDouble(double doubleTime, uint32_t timeScale)
         return positiveInfiniteTime();
     if (doubleTime < std::numeric_limits<int64_t>::min())
         return negativeInfiniteTime();
+    if (!timeScale)
+        return std::signbit(doubleTime) ? negativeInfiniteTime() : positiveInfiniteTime();
 
     while (doubleTime * timeScale > std::numeric_limits<int64_t>::max())
         timeScale /= 2;
@@ -481,6 +495,11 @@ void MediaTime::setTimeScale(uint32_t timeScale, RoundingFlags flags)
 {
     if (hasDoubleValue()) {
         *this = MediaTime::createWithDouble(m_timeValueAsDouble, timeScale);
+        return;
+    }
+
+    if (!timeScale) {
+        *this = m_timeValue < 0 ? negativeInfiniteTime() : positiveInfiniteTime();
         return;
     }
 
